--- a/src/sass/index/_usenav.scss
+++ b/src/sass/index/_usenav.scss
@@ -128,6 +128,7 @@
                        &:hover{
                            background-color:$bg_gray_color;
                            color:$font_color !important;
+                           text-decoration: none;
                        }
                    }
                    .myboxlogin{
