--- a/src/sass/_cart.scss
+++ b/src/sass/_cart.scss
@@ -215,6 +215,11 @@
                     padding: 15px 0 0 20px;
                     line-height: 1.8em;
                     @include clearfix();
+                    img{
+                        width: 60px;
+                        height: 60px;
+                        border: 1px solid #DCDDDD;
+                    }
                     input{
                         float: left;
                         margin: 20px 5px 0 0;
@@ -391,4 +396,84 @@
             }
         } 
     }
+}
+.alert_popup{
+    z-index: 999999;
+    left: 35%;
+    top: 40%;
+    width: 424px;
+    position: fixed;
+    i{
+        position: absolute;
+        background: none;
+        color: #565656;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: bold;
+        top: 8px;
+        right: 10px;
+        cursor: pointer;
+    }
+    .alert_top{
+        width: 424px;
+        height: 10px;
+        background: url("http://static.womai.com/zhongliang/commonalert/images/top_bg.png") no-repeat;  
+    }
+    .alert_content{
+        width: 424px;
+        background: #fff;
+        h3{
+            padding: 10px 0 20px 30px;
+            color: #333;
+            font-size: 20px;
+            margin: 0;
+        }
+        p{
+            width: 380px;
+            padding: 0 20px;
+            line-height: 1.6em;
+            color: #333;
+            font-size: 14px;
+            text-align: center;
+        }
+    }
+    .alert_pop_btn1{
+       margin-top: 50px;
+       a{
+        display: inline-block;
+        width: 210px;
+        height: 30px;
+        line-height: 40px;
+        text-align: center;
+        font-size: 14px;
+        border-top: 1px solid #78b54f;
+        text-decoration: none;
+       }
+       #alert_confirm{
+            background: #78b54f;
+            color: #fff;
+       } 
+       #alert_cancle{
+            background: #fff;
+            color: #7f7f7f;
+       }
+    }
+    .alert_bottom{
+        width: 420px;
+        height: 10px;
+        background: url("http://static.womai.com/zhongliang/commonalert/images/bottom_bg1.png") no-repeat;        
+    }
+}
+.alertlayout{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 765px;
+    opacity: 0.5;
+    background-color: rgb(0, 0, 0);
+    z-index: 99999;
+}
+.alertbox{
+    display: none;
 }
