--- a/src/sass/index/_banner.scss
+++ b/src/sass/index/_banner.scss
@@ -1,5 +1,70 @@
 @charset "utf-8";
-
-.banner{
-
+.banner {
+    width: 800px;
+    height: 450px;
+    position: relative;
+    overflow: hidden;
+    ul {
+        display: none;
+        height: 450px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding-left: 0;
+        li {
+            float: left;
+            height: 450px;
+            width: 800px !important;
+            list-style: none;
+            a {
+                display: block;
+                font-weight: bold;
+            }
+        }
+    }
+     &:hover {
+         .left-btn,
+    .right-btn{
+        display: block;
+    }
+     }
+    .left-btn,
+    .right-btn {
+        display: none;
+        font-size: 22px;
+        width: 28px;
+        height: 62px;
+        line-height: 62px;
+        background: #eee;
+        opacity: 0.7;
+        position: absolute;
+        top: 45%;
+        text-align: center;
+        cursor: pointer;
+    }
+    .right-btn {
+        right: 30px;
+    }
+    .left-btn {
+        left: 30px;
+    }
+    .img-btn-list {
+        width: 100%;
+        position: absolute;
+        bottom: 10px;
+        left: 0;
+        text-align: center;
+        span {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            border-radius: 12px;
+            margin: 0 5px;
+            background: rgba(0, 0, 0, 0.8);
+            cursor: pointer;
+        }
+        span.current {
+            background: rgba(255, 255, 255, 0.8);
+        }
+    }
 }
