--- a/src/sass/index/_section_5.scss
+++ b/src/sass/index/_section_5.scss
@@ -8,18 +8,14 @@
             font-size: 16px;
             line-height: 36px;
             color: $foolr_color_border;
-            li{
-                &:nth-of-type(1){
-                    border-bottom: 2px solid #a1c0f6;
-                    color: $foolr_color_border;
-                }
+            li{               
                 height: 36px;
                 margin-right: 30px;
                 padding: 0 5px;
                 text-align: center;
                 color: $nav_section_blank_color;
                 overflow: hidden;
-                float: left;
+                float: left;               
             }
             :after{
                 content: '\0020';
@@ -101,6 +97,31 @@
     }
     
     .content_bottom_2_2{
-        display: none;     
-    }    
+        display: none;
+             
+        span{
+            display: block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+ 
+    } 
+    
+    .tabsection{
+            border-bottom: 2px solid #a1c0f6;
+            color: $foolr_color_border;
+    }
+    .conbot{
+        display: none;
+    }
+    .tabdivshow{
+        display: block;
+    }
+    img:hover{
+          left: 10px;
+          transition: left 0.5s; 
+
+    }
+          
 }
